[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disk_usage_exporter"
version = "0.0.1"
authors = [
    { name="Murad Murtuzaliev", email="muradmurtuzaliev404@gmail.com" },
]
description = "Exporter for disk usage metrics"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux"
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "prometheus_client==0.21.1",
    "sh==2.2.1",
]

[project-urls]
Homepage = "https://github.com/zektorum/disk_usage_exporter"
Issues = "https://github.com/zektorum/disk_usage_exporter/issues"

[project.scripts]
executive = "disk_usage_exporter.disk_usage_exporter:main"
