[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "disk_usage_exporter"
authors = [
    { name="Murad Murtuzaliev", email="muradmurtuzaliev404@gmail.com" },
]
description = "Exporter for disk usage metrics"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux"
]
dynamic = ["version", "dependencies"]

[project-urls]
Homepage = "https://github.com/zektorum/disk_usage_exporter"
Issues = "https://github.com/zektorum/disk_usage_exporter/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = { attr="disk_usage_exporter.__version__" }
dependencies = { file="requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["disk_usage_exporter"]

[project.scripts]
disk_usage_exporter = "disk_usage_exporter.disk_usage_exporter:main"
